--- a/styles/main.css
+++ b/styles/main.css
@@ -1,1 +1,158 @@
-<!-- In this file you are going to write the CSS code -->
+/* In this file you are going to write the CSS code -->*/
+* {
+    margin: 0;
+    padding: 0;
+}
+
+.transparent_nav{
+    background-color: rgba(255, 255, 255, 0.7);
+    position: fixed;
+    top: 0;
+    width: 100%;
+    height: 60px;
+}
+
+#nav_list{
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    margin-right: 180px;
+}
+
+#nav_list li{
+    display: flex;
+    justify-content: flex-end;
+    flex-direction: row;
+    /*align-content: space-between;*/
+    
+    
+}
+
+
+
+#nav_list a {
+    display: flex;
+    
+    margin: 15px 10px 25px 10px;
+    padding: 5px 5px 5px 5px;
+    align-items: center;
+    justify-content: space-around;
+    text-align: center;
+    color: black;
+    text-decoration: none;
+}
+
+#nav_list a:hover{
+    background-color: #a9a9a9;
+}
+
+#nav_list img{
+    margin-right: auto;
+    margin-left: 250px;
+    margin: 5px auto 20px 250px;
+    height: 50px;
+    width: 80px;
+}
+
+.cta img{
+    height: 500px;
+    width: 1320px;
+    margin-left:15px;
+    
+}
+
+.cta #cta_text{
+    display: flex;
+    color: black;
+    position: relative;
+    margin-left: 15px;
+   bottom: 59px;
+   height: 30px;
+   padding: 20px 5px 5px 75px;
+    font-size: 18px;
+    background-color: rgba(255, 255, 255, 0.7);
+}
+
+.cta #cta_link{
+    display: flex;
+    position: relative;
+    margin-top: -10px;
+    margin-left: auto;
+    margin-right: 150px;
+    padding: 10px 10px 10px 10px;
+    font-size: 18px;
+    background-color: skyblue;
+    color: white;
+    text-decoration: none;
+    opacity: 0.7;   
+}
+
+.cta #cta_link:hover{
+    opacity: 1;
+}
+
+.recent_work{
+    display: flex;
+    flex-wrap: wrap;
+    margin: 25px 0px 25px 42px;
+
+}
+
+.recent_work img{
+    width: 250px;
+    margin-right: -4px;
+
+}
+
+.testimonials_wrapper{
+    
+    background-color: gray;
+    margin: 25px 50px 25px 42px;
+ }
+
+.testimonials_wrapper h3{
+    font-size: 25px;
+    text-align: center;
+    margin-bottom: 105px;
+    
+}
+
+.testimonials_wrapper ul{
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   list-style-type: none;
+   margin-left: 45px;
+    
+}
+
+.testimonials_wrapper li{
+    text-decoration: none;
+     
+ }
+
+ .testimonials_wrapper ul{
+    text-decoration: none;
+     
+ }
+
+ .testimonials_wrapper img{
+    text-decoration: none;
+     border-radius: 5px;
+ }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
