--- a/styles/main.css
+++ b/styles/main.css
@@ -104,10 +104,22 @@
 
 }
 
-.testimonials_wrapper{
+.recent_work img:hover{
     
-    background-color: gray;
+
+    transition: width 2s linear 0;
+    width: 300px;
+
+
+}
+
+.testimonials_wrapper{
+    display: flex;
+   justify-content: center;
+   flex-flow: wrap;
     margin: 25px 50px 25px 42px;
+    height: auto;
+    padding: 10px 20px 20px 20px;
  }
 
 .testimonials_wrapper h3{
@@ -121,25 +133,259 @@
    display: flex;
    justify-content: center;
    align-items: center;
+   align-content: space-between;
    list-style-type: none;
    margin-left: 45px;
+   flex-wrap: wrap;
     
 }
 
 .testimonials_wrapper li{
     text-decoration: none;
-     
+    width: 250px;
+    margin:10px 50px 20px 20px;
+    flex-wrap: wrap;
+    
  }
 
- .testimonials_wrapper ul{
-    text-decoration: none;
-     
+ .testimonials_wrapper p{
+
+    display: block;
+    margin-top: 20px;
+    width: 275px;
+    text-align: center;
+   
  }
 
  .testimonials_wrapper img{
     text-decoration: none;
-     border-radius: 5px;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+    border-radius: 50%;
  }
+
+ .brands {
+    display: flex;
+    flex-flow: row wrap;
+    align-content: flex-start;
+    width: 100%;
+    height: 70px;
+    background-color: rgba(241, 234, 234, 0.5);
+}
+
+.brand_div1 {
+    padding: 20px;
+    margin-left: 180px;
+    box-sizing: border-box;
+    text-align: center;
+   height: 70px;
+}
+
+.brand_div2 {
+    padding: 20px;
+    margin-left: 35px;
+    box-sizing: border-box;
+    text-align: center;
+    height: 70px;
+}
+
+.brand_div3 {
+    padding: 20px;
+    margin-left: 35px;
+    box-sizing: border-box;
+    text-align: center;
+    height: 70px;
+}
+
+.brand_div4 {
+    padding: 20px;
+    margin-left: 35px;
+    box-sizing: border-box;
+    text-align: center;
+    height: 70px;
+}
+
+.brand_div5 {
+    padding: 20px;
+    margin-left: 35px;
+    box-sizing: border-box;
+    text-align: center;
+    height: 70px;
+}
+
+.brand_div6 {
+    padding: 20px;
+    margin-left: 35px;
+    box-sizing: border-box;
+    text-align: center;
+    height: 70px;
+}
+
+footer{
+
+    display: block;
+    color: white;
+    
+    flex-flow: row wrap;
+    /*align-items: flex-end;*/
+    
+    position: relative;
+    background-color: rgb(34, 31, 31);
+    height: auto;
+}
+
+.widget{
+    flex-flow: row wrap;
+    
+    display: flex;
+   justify-content: center;
+   align-items: center;
+   align-content: space-between;
+   margin-left: 45px;
+   
+}
+
+
+.widget p{
+    width: 275px;
+    margin-top: 10px;
+}
+
+.sub_widget2{
+    margin-top: 45px;
+}
+
+.sub_widget2 ul{
+    margin-top: 10px;
+}
+
+.sub_widget2 a{
+    text-decoration: none;
+    color: white;
+}
+
+.sub_widget2 li{
+    text-decoration: none;
+    margin-top: 5px;
+    list-style-type: none;
+}
+
+.sub_widget1{
+    margin-top: 65px;
+}
+
+.sub_widget3{
+    margin-top: 9px;
+    margin-left: 95px;
+}
+
+.sub_widget3 ul{
+    margin-top: 10px;
+}
+
+.sub_widget3 li{
+    list-style-type: none;
+    text-decoration: none;
+}
+
+.sub_widget3 a{
+    text-decoration: none;
+    color: white;
+}
+.sub_widget4{
+    margin-left: 95px;
+}
+
+.sub_widget4 p{
+    margin-top: 10px;
+}
+
+.rights{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 125px;
+    padding-bottom: 45px;
+}
+
+.us3    {
+    display: block;
+    position: relative;
+    box-sizing: border-box;
+    margin: auto;
+    margin-top: 0;
+    /* margin-left: 250px; */
+    border: white;
+    height: 500px;
+    width: 70%;
+    background-color: rgba(241, 234, 234, 0.5);
+}
+
+#us3_1  {
+    font-size: 1.6em;
+    text-align: center;
+    padding-top: 100px; 
+    font-family: Helvetica,Arial,sans-serif
+}
+
+#seperator  {
+    padding-left: 165px;
+    width: 600px;
+    padding-top: 10px;
+}
+
+#list   {
+    display: block;
+    height: 250px;
+}
+
+#image1 {
+    padding-left: 140px;
+    margin-top: 10px;
+}
+
+#image2 {
+    padding-left: 250px;
+    margin-top: 10px;
+}
+
+#image3 {
+    padding-left: 240px;
+    margin-top: 10px;
+}
+
+.myli   {
+    font-weight: 700;
+    font-size: 1.3em;
+    list-style-type: none;
+    display: inline;
+    padding: 20px;
+}
+
+#slv2   {
+    padding: 60px;
+    padding-right: 70px;
+}
+
+.mypara {
+    display: block;
+    position: absolute;
+    width: 260px;
+    text-align: center;
+    margin-left: 25px;
+}
+
+#para2  {
+    margin-left: 325px;
+}
+
+#para3  {
+    margin-left: 630px;
+}
+
+
+
 
 
 
