--- a/styles/main.css
+++ b/styles/main.css
@@ -65,7 +65,7 @@
 }
 
 .cta #cta_text{
-    display: flex;
+    display: inline-flex;
     color: black;
     position: absolute;
     margin-left: 15px;
@@ -106,16 +106,12 @@
 .recent_work img{
     width: 250px;
     margin-right: -4px;
-
 }
 
 .recent_work img:hover{
     
-
     transition: width 2s linear 0;
     width: 300px;
-
-
 }
 
 .testimonials_wrapper{
@@ -306,7 +302,7 @@ footer{
     margin-top: 10px;
 }
 
-.rights{
+.rights p{
     display: flex;
     justify-content: center;
     align-items: center;
@@ -316,11 +312,10 @@ footer{
 
 .us3    {
     display: block;
-    position: relative;
+    position: block;
     box-sizing: border-box;
     margin: auto;
     margin-top: 0;
-    /* margin-left: 250px; */
     border: white;
     height: 500px;
     width: 70%;
@@ -406,10 +401,12 @@ footer{
 
 #para2  {
     margin-left: 325px;
+    display: block;
 }
 
 #para3  {
     margin-left: 630px;
+    display: block;
 }
 
 
