--- a/styles/main.css
+++ b/styles/main.css
@@ -121,12 +121,14 @@
     margin: 25px 50px 25px 42px;
     height: auto;
     padding: 10px 20px 20px 20px;
+    align-items: center;
  }
 
-.testimonials h3{
+.testheading h3{
     font-size: 25px;
     text-align: center;
     margin-bottom: 105px;
+    
     
 }
 
@@ -238,7 +240,7 @@ footer{
 
 .widget{
     flex-flow: row wrap;
-    
+    padding-top: 95px;
     display: flex;
    justify-content: center;
    align-items: center;
@@ -446,6 +448,17 @@ footer{
 .cta1 #cta_link1:hover{
     opacity: 1;
 }
+
+/* #us4_1  {
+    font-size: 1.6em;
+    text-align: center;
+    padding-top: 100px; 
+    /* color: darkgrey; */
+    /* color: rgb(124, 108, 108); */
+    font-family: Helvetica,Arial,sans-serif;
+    padding-bottom : 50px;
+} */
+
 
 
 
