--- a/styles/main.css
+++ b/styles/main.css
@@ -304,7 +304,7 @@ footer{
     margin-top: 10px;
 }
 
-.rights p{
+.rights{
     display: flex;
     justify-content: center;
     align-items: center;
