--- a/styles/main.css
+++ b/styles/main.css
@@ -108,7 +108,7 @@
     margin-right: -4px;
 }
 
-.recent_work img:hover{
+.work:hover{
     
     transition: width 2s linear 0;
     width: 300px;
